--- a/WowCarLauncher/mobile/src/main/res/layout/activity_base.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_base.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/toolBar"
-        app:titleTextColor="#ffffff" />
+        android:layout_height="48dp"
+        android:background="@color/toolbar_bg"
+        android:fitsSystemWindows="true">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="10dp"
+            android:src="@mipmap/ic_back"
+            app:layout_heightPercent="100%h"
+            app:layout_widthPercent="100%h" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textColor="@android:color/white" />
+    </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <RelativeLayout
         android:id="@+id/b_content"
