--- a/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
@@ -162,8 +162,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/l_item_bg_black"
@@ -180,20 +180,11 @@
             android:orientation="horizontal"
             app:layout_heightPercent="20%h">
 
-            <ImageView
-                android:id="@+id/iv_up1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/iv_content"
-                android:padding="5dp"
-                android:src="@mipmap/ic_up" />
-
             <com.zhy.android.percent.support.PercentLinearLayout
                 android:id="@+id/ll_dock1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -210,7 +201,7 @@
                 android:id="@+id/ll_dock2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -227,7 +218,7 @@
                 android:id="@+id/ll_dock3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -244,7 +235,7 @@
                 android:id="@+id/ll_dock4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -262,7 +253,7 @@
                 android:id="@+id/ll_dock5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -279,7 +270,7 @@
                 android:id="@+id/ll_dock6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -296,7 +287,7 @@
                 android:id="@+id/ll_all_apps"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -310,13 +301,13 @@
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <ImageView
-                android:id="@+id/iv_up2"
+                android:id="@+id/iv_up"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/iv_content"
                 android:padding="5dp"
-                android:src="@mipmap/ic_up" />
+                android:src="@mipmap/ic_controller" />
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
 
