--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_qm_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_qm_launcher.xml
@@ -97,12 +97,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/pb_music"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/tv_time"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
-        android:paddingStart="20dp"
+        android:paddingLeft="20dp"
         android:text="@string/music_album"
         android:textColor="@android:color/white"
         app:layout_textSizePercent="6%h" />
