--- a/WowCarLauncher/mobile/src/main/res/layout/activity_all_app.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_all_app.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:gravity="center">
 
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="5" />
-</LinearLayout>
+</FrameLayout>
