--- a/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
@@ -19,6 +19,7 @@
             app:layout_heightPercent="20%h">
 
             <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_time"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
